fixes steady eats bugs

--- a/projects/steady_eats/food.html
+++ b/projects/steady_eats/food.html
@@ -17,6 +17,7 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src = "food.js"></script>
     <script src = "yelp.js"></script>
     <script src = "nutrient.js"></script>
