main page css changes

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="https://paul-su-spotify.site"> -->
-                  <h4>React, HTML5, CSS3, Bootstrap 4, AWS, EC2, Ubuntu, Apache2</h4>
+                  <h4>React, HTML5, CSS3, Bootstrap 4, AWS: EC2, Ubuntu, Apache2</h4>
                   <h3>Spotify Mockup</h3>
                 <!-- </a> -->
               </div>
@@ -577,7 +577,7 @@
           </div>
 
           <!-- service list -->
-          <div class="service-list grid-1 grid-md-2 grid-lg-4 anim-list decor">
+          <div class="service-list grid-2 grid-md-2 grid-lg-4 anim-list decor">
             <!-- an item -->
             <div class="item media">
               <div class="img">
@@ -656,7 +656,7 @@
                   <i class="devicon-amazonwebservices-original colored"></i>
               </div>
               <div class="media-body">
-                <h4>AWS, EC2, S3, CloudFront</h4>
+                <h4>AWS: EC2, S3, CloudFront</h4>
               </div>
             </div>
             <!-- an item -->
