--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <a target="_blank" href="https://standapp.live">
                   
                   <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
-                  <h3>Stand App (In-Development)</h3>
+                  <h3>Stand App</h3>
                 </a>
               </div>
               <div class="media-footer">
