new repo for stand app

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 </a>
               </div>
               <div class="media-footer">
-                <a target="_blank" class="icon-btn" href="https://github.com/Learning-Fuze/c618_standup">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/stand_app">
                   <i class="icon fa fa-github"></i>
                 </a>
                 <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://standapp.live">
